<resources>
    <string name="app_name">XvsO</string>
    <string name="winX">X Wins</string>
    <string name="winO">O Wins</string>
    <string name="nowX">Xs Turn</string>
    <string name="nowO">Os Turn</string>
    <string name="chackWinX">X has won</string>
    <string name="chackWinO">O has won</string>
    <string name="tie">Its a Tie</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="messages_header">Messages</string>
    <string name="signature_title">Your Signature</string>
    <string name="reply_title">Default Reply Action</string>
    <string name="sync_header">Synchronization</string>

    <string name="settings">Settings</string>
    <string name="select_language">Select Language</string>
    <string name="change_language">Change Language</string>
    <string name="language_change_restart">The app will be restarted to change the language. Continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="but_site">Learn about our other project BeatSeeker</string>


    <string name="attachment_title">Download Attachments</string>
    <string name="attachment_summary_on">Automatic download enabled</string>
    <string name="attachment_summary_off">Only download on request</string>

    <string name="update_now">Update Now</string>
    <string name="check_for_updates_status">Check for Updates</string>

    <string-array name="language_options">
        <item>Українська</item>
        <item>English</item>
        <item>Polski</item>
    </string-array>

</resources>
